<resources>
    <string name="app_name">Service4U</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="my_account">My Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="meta_firebase_ui">Date Account was created: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_create_account">Create Account</string>

    <string name="action_settings">Settings</string>
    <string name="admin">Administrator</string>
    <string name="service_provider">Service Provider</string>
    <string name="homeowner">Homeowner</string>
    <string name="welcome">Welcome to S4U</string>
    <string name="email">Email</string>
    <string name="name">Name:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="user_type">User type</string>
    <string name="phone_title_text">Phone number (optional for admins)</string>
    <string name="address_title_text">Address (required for homeowners)</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="users">Users:</string>
    <string name="password_hint">at least 6 characters</string>
    <string name="start">Start</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="done">Done</string>
    <string name="services">Services</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="book_service">Book Service</string>
    <string name="book_job">Book Job</string>
    <string name="my_jobs">My Jobs</string>
    <string name="edit_account">Edit account details</string>
    <string name="main_page">main page</string>
    <string name="please_signin">Please sign in OR create a new account</string>
    <string name="my_availability">My Availability</string>
    <string name="my_services">My Services</string>
    <string name="update_availability">Update Availability</string>
    <string name="back">Back</string>
    <string name="morning">morning</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="find_a_provider">find a service provider</string>

    <string-array name="service_type_array">
        <item>Cable/Internet</item>
        <item>Carpentry</item>
        <item>Cleaning</item>
        <item>Delivery</item>
        <item>Electrical</item>
        <item>Interior Design</item>
        <item>IT</item>
        <item>Landscaping</item>
        <item>Logistics</item>
        <item>Painting</item>
        <item>Plumbing</item>
        <item>Security</item>
        <item>Misc</item>
    </string-array>


    <string-array name="time_slots">
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
    </string-array>


    <string-array name="urgency_array">
        <item>24 hours</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 months</item>
    </string-array>

    <string-array name="times_array">
        <item>06:00</item>
        <item>11:00</item>
        <item>16:00</item>
        <item>19:00</item>
    </string-array>


    <string name="title_activity_job_options">Booking Options</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cancel_job">cancel job</string>
    <string name="no_job_options">There are no available service providers that match your request</string>


</resources>
